[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Indicators.gd" type="Script" id=1]
[ext_resource path="res://UI/Life_bar/lifebar_2.png" type="Texture" id=2]
[ext_resource path="res://UI/Life_bar/lifebar_3.png" type="Texture" id=3]
[ext_resource path="res://UI/Life_bar/lifebar_1.png" type="Texture" id=4]
[ext_resource path="res://UI/hp_amount.gd" type="Script" id=5]
[ext_resource path="res://UI/knife_bar/knife_back.png" type="Texture" id=6]
[ext_resource path="res://UI/knife_bar/knife_over.png" type="Texture" id=7]
[ext_resource path="res://UI/knife_bar/knife_progress.png" type="Texture" id=8]
[ext_resource path="res://UI/knife_bar/knife_enable.png" type="Texture" id=9]

[node name="Indicators" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="hp_amount" type="TextureProgress" parent="."]
light_mask = 0
margin_left = 240.444
margin_top = 268.337
margin_right = 752.444
margin_bottom = 780.338
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 8
radial_initial_angle = 270.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="hp_amount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.125
margin_top = -218.109
margin_right = 34.125
margin_bottom = 218.109
rect_scale = Vector2( 1.49973, 1.75778 )
text = "100/100"
percent_visible = -0.142857

[node name="Tween" type="Tween" parent="hp_amount"]

[node name="knife_amount" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 311.897
margin_top = 292.759
margin_right = 823.897
margin_bottom = 804.759
rect_scale = Vector2( 0.25, 0.28 )
value = 79.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3

[node name="curent_element" type="TextureRect" parent="knife_amount"]
margin_top = 0.94812
margin_right = 512.0
margin_bottom = 512.948
texture = ExtResource( 9 )

[node name="wood_amount" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 335.529
margin_top = 300.159
margin_right = 847.529
margin_bottom = 812.159
rect_rotation = 15.0
rect_scale = Vector2( 0.25, 0.25 )
value = 90.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_under = Color( 0.180392, 0.756863, 0, 0.576471 )
tint_over = Color( 0.490196, 1, 0.329412, 1 )
tint_progress = Color( 0.4, 1, 0.478431, 0.764706 )

[node name="curent_element" type="TextureRect" parent="wood_amount"]
modulate = Color( 0.419608, 0.937255, 0.537255, 0.733333 )
margin_left = -0.938736
margin_top = 0.149597
margin_right = 511.061
margin_bottom = 512.15
texture = ExtResource( 9 )

[node name="fire_amount" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 289.912
margin_top = 302.29
margin_right = 801.912
margin_bottom = 814.29
rect_rotation = -15.0
rect_scale = Vector2( 0.25, 0.25 )
value = 83.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_under = Color( 1, 0.0470588, 0, 0.615686 )
tint_over = Color( 0.882353, 0.290196, 0.0823529, 0.741176 )
tint_progress = Color( 0.980392, 0.25098, 0.0823529, 1 )

[node name="curent_element" type="TextureRect" parent="fire_amount"]
modulate = Color( 1, 0.211765, 0.0313726, 0.733333 )
margin_left = -0.938736
margin_top = 0.149597
margin_right = 511.061
margin_bottom = 512.15
texture = ExtResource( 9 )

[node name="spring_amount" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 357.823
margin_top = 311.993
margin_right = 869.823
margin_bottom = 823.993
rect_rotation = 35.0
rect_scale = Vector2( 0.25, 0.22 )
value = 80.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_under = Color( 0.0823529, 0.235294, 0.929412, 0.827451 )
tint_over = Color( 0, 0.368627, 1, 1 )
tint_progress = Color( 0, 0.529412, 1, 1 )

[node name="curent_element" type="TextureRect" parent="spring_amount"]
modulate = Color( 0.105882, 0.921569, 0.941176, 1 )
margin_left = -0.541946
margin_top = 1.11957
margin_right = 511.458
margin_bottom = 513.12
texture = ExtResource( 9 )

[node name="Earth_amount" type="TextureProgress" parent="."]
editor/display_folded = true
margin_left = 270.294
margin_top = 316.865
margin_right = 782.294
margin_bottom = 828.865
rect_rotation = -35.0
rect_scale = Vector2( 0.25, 0.22 )
value = 80.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_under = Color( 0.831373, 0.407843, 0.0352941, 0.827451 )
tint_over = Color( 0.607843, 0.313726, 0, 1 )
tint_progress = Color( 0.65098, 0.352941, 0, 1 )

[node name="curent_element" type="TextureRect" parent="Earth_amount"]
modulate = Color( 0.968627, 0.545098, 0, 1 )
margin_left = -0.938736
margin_top = 0.149597
margin_right = 511.061
margin_bottom = 512.15
texture = ExtResource( 9 )
[connection signal="hp_changed" from="." to="hp_amount" method="_on_Indicators_hp_changed"]
[connection signal="max_hp_changed" from="." to="hp_amount" method="_on_Indicators_max_hp_changed"]
